--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                             Comparer
                         </div>
                         <div class="button__label--long">
-                            <a href="form.html">Comparer nos assurances Auto</a>
+                            <a href="#">Comparer nos assurances Auto</a>
                         </div>
                     </div>
                 </div>
@@ -85,7 +85,7 @@
                                 Comparer nos assurances Auto
                             </div>
                             <div class="label label--medium">
-                                <a href="form.html">Comparer nos assurances Auto</a>
+                                <a href="#">Comparer nos assurances Auto</a>
                             </div>
                         </div>
 
@@ -330,7 +330,7 @@
     color: #2711a9;
 "> Besoin d'une assurance qui colle à votre besoin et à votre budget
                     </div>
-                    <div class="button button--medium button--blueLight lazyLink" rel="nofollow" data-href="#" style="background: #573df2;"><a href="form.html">Comparer nos assurances auto</a></div>
+                    <div class="button button--medium button--blueLight lazyLink" rel="nofollow" data-href="#" style="background: #573df2;"><a href="#">Comparer nos assurances auto</a></div>
                 </div>
             </div>
         </section>
