--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <div class="sticky-header--logo">
                     <a class="logo" href="#" title="Notre service">
                         <img alt="Logo Notre service" src="images/logo.png" style="
-    max-width: 150%;
+    max-width: 150%;width: 177px
 ">
                     </a>
                 </div>
